# conan-example

./: CMakeLists.txt  build.ps1  conanfile.txt  main.cpp
